:recycle: env: Add github theme

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typeface-merriweather": "0.0.43",
     "typeface-montserrat": "0.0.43",
     "typography": "^0.16.17",
+    "typography-theme-github": "^0.16.18",
     "typography-theme-wordpress-2016": "^0.15.10"
   },
   "devDependencies": {
