--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-sass": "^4.11.0",
     "prismjs": "^1.15.0",
     "react": "^16.5.1",
+    "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.13",
