--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-transformer-sharp": "^2.1.3",
     "node-sass": "^4.11.0",
     "prismjs": "^1.15.0",
+    "randomcolor": "^0.5.3",
     "react": "^16.5.1",
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.5.1",
