--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-source-filesystem": "^2.0.2",
     "gatsby-transformer-remark": "^2.1.6",
     "gatsby-transformer-sharp": "^2.1.3",
+    "intersection-observer": "^0.5.1",
     "node-sass": "^4.11.0",
     "prismjs": "^1.15.0",
     "react": "^16.5.1",
