--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.13",
+    "smooth-scroll": "^15.0.0",
     "typeface-catamaran": "0.0.54",
     "typeface-merriweather": "0.0.43",
     "typeface-montserrat": "0.0.43",
