--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
+    "react-switch": "^4.0.1",
     "react-typography": "^0.16.13",
     "smooth-scroll": "^15.0.0",
     "typeface-catamaran": "0.0.54",
