--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react-hooks": "^1.0.1",
     "prettier": "^1.14.2"
   },
   "homepage": "https://github.com/JaeYeopHan/felog#readme",
