--- a/package.json
+++ b/package.json
@@ -48,10 +48,16 @@
     "typography-theme-github": "^0.16.18"
   },
   "devDependencies": {
+    "date-fns": "^1.30.1",
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-react-hooks": "^1.0.1",
-    "prettier": "^1.14.2"
+    "fs-extra": "^7.0.1",
+    "gray-matter": "^4.0.2",
+    "inquirer": "^6.2.2",
+    "prettier": "^1.14.2",
+    "recursive-readdir": "^2.2.2",
+    "signale": "^1.3.0"
   },
   "homepage": "https://github.com/JaeYeopHan/JBEE.io#readme",
   "keywords": [
