:recycle: env: Add npm script for using cli tool

--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "url": "git+https://github.com/JaeYeopHan/JBEE.io.git"
   },
   "scripts": {
+    "post": "node ./cli/create-new-post.js",
     "dev": "gatsby develop",
     "lint": "eslint --ext .js,.jsx --ignore-pattern public .",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js' 'src/**/*.md'",
