--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "typography-theme-github": "^0.16.18"
   },
   "devDependencies": {
+    "@sentry/browser": "^4.6.3",
     "date-fns": "^1.30.1",
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.11.1",
