--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@sentry/browser": "^4.6.3",
+    "bundlesize": "^0.17.1",
     "date-fns": "^1.30.1",
     "eslint": "^5.14.1",
     "eslint-plugin-react": "^7.11.1",
@@ -74,6 +75,7 @@
   "scripts": {
     "post": "node ./cli/create-new-post.js",
     "lh": "lighthousebot",
+    "bs": "bundlesize",
     "dev": "gatsby develop",
     "lint": "eslint --ext .js,.jsx --ignore-pattern public .",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js' 'src/**/*.md'",
@@ -81,5 +83,11 @@
     "start": "npm run develop",
     "build": "gatsby build",
     "fix-semi": "eslint --quiet --ignore-pattern node_modules --ignore-pattern public --parser babel-eslint --no-eslintrc --rule '{\"semi\": [2, \"never\"], \"no-extra-semi\": [2]}' --fix gatsby-node.js"
-  }
+  },
+  "bundlesize": [
+    {
+      "path": "./public/app-*.js",
+      "maxSize": "100 kB"
+    }
+  ]
 }
